# cookiecutter-python-web-api

./: LICENSE  README.md  cookiecutter.json
{{cookiecutter.project_slug}}/: .dockerignore  .env.template  .gitignore  .prettierignore  CITATION.cff  Dockerfile  README.md  docker-compose.overrides.yml  docker-compose.yml  pyproject.toml  requirements.txt
{{cookiecutter.project_slug}}/docker/: _entrypoint.sh
{{cookiecutter.project_slug}}/migrations/: env.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/: __main__.py  config.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/cli/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/: __init__.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/db/models/: dummy.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/inference/: __init__.py  base.py
{{cookiecutter.project_slug}}/{{cookiecutter.project_slug}}/inference/models/: example.py
